--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,11 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Operating System files.
+.DS_Store
+Thumbs.db
+
+# PDF & zip files
+*.pdf
+*.zip
