--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,9 +5,8 @@
 	"background_color": "#ffffff",
 	"theme_color": "#d24115",
 	"display": "standalone",
-	"scope": "./",
-	"start_url": "./",
-	"orientation": "portrait",
+	"scope": "/",
+	"start_url": "/",
 	"icons": [
 		{
 			"src": "./manifest-icons/icon-72x72.png",
