--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
 		"postcss": "^8.4.30"
 	},
 	"dependencies": {
-		"bootstrap": "^5.3.2",
-		"normalize.css": "^8.0.1"
+		"bootstrap": "^5.3.2"
 	}
 }
