feat: add bg, thumbnail, new fonts

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
 	"name": "Hanuman Chalisa",
-	"short_name": "Chalisa",
+	"short_name": "Hanuman Chalisa",
 	"description": "Read and recite Hanuman Chalisa",
 	"background_color": "#ffffff",
 	"theme_color": "#d24115",
