chore(scripts): update the file path in script

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"dev": "parcel src/index.html --no-source-maps --no-cache",
 		"prebuild": "rm -rf .parcel-cache dist",
 		"build": "parcel build src/index.html --public-url=https://hanuman-chalisa.netlify.app",
-		"postbuild": "cp public/robots.txt dist/robots.txt"
+		"postbuild": "cp src/assets/robots.txt dist/robots.txt"
 	},
 	"repository": {
 		"type": "git",
