--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,32 @@
-# EditorConfig is awesome: https://EditorConfig.org
-
-# top-most EditorConfig file
+# Root EditorConfig file to maintain consistent coding style across editors and IDEs
 root = true
 
+# Default settings for all files
 [*]
+charset = utf-8                 # Set character encoding to UTF-8
+end_of_line = lf                # Use LF (Unix-style) for line endings
+indent_style = space            # Use spaces for indentation
+indent_size = 2                 # Set indentation size to 2 spaces
+insert_final_newline = true     # Ensure a newline is present at end of files
+trim_trailing_whitespace = true # Remove trailing whitespace
+
+# Override for text files (preserve trailing whitespace)
+[*.txt]
+trim_trailing_whitespace = false
+
+# Override for Markdown, JSON, and YAML files
+[*.{md,yml}]
+indent_style = space  # Use spaces for indentation
+indent_size = 2       # Set indentation size to 2 spaces
+trim_trailing_whitespace = false
+
+# Override for JSON files (use tabs but keep indent size as 2)
+[*.json]
 indent_style = tab
-indent_size = 4
-end_of_line = lf
-charset = utf-8
-trim_trailing_whitespace = true
-insert_final_newline = true
+indent_size = 2
+trim_trailing_whitespace = false
+
+# Override for JavaScript, TypeScript, and JSX/TSX files
+[*.{js,mjs,cjs,jsx,ts,tsx}]
+indent_style = space
+indent_size = 2
