--- a/.postcssrc
+++ b/.postcssrc
@@ -1,10 +1,5 @@
 {
-	"plugins": {
-		"@tailwindcss/postcss": {},
-		"@fullhuman/postcss-purgecss": {
-			"content": [
-				"./src/**/*.{html,js,scss}"
-			]
-		}
-	}
+  "plugins": {
+    "@tailwindcss/postcss": {}
+  }
 }
