--- a/package.json
+++ b/package.json
@@ -33,17 +33,14 @@
 		"postbuild": "cp src/assets/robots.txt dist/robots.txt"
 	},
 	"dependencies": {
-		"@tailwindcss/postcss": "^4.1.2"
+
 	},
 	"devDependencies": {
-		"@fullhuman/postcss-purgecss": "^6.0.0",
-		"@parcel/packager-raw-url": "^2.12.0",
-		"@parcel/service-worker": "^2.12.0",
-		"@parcel/transformer-sass": "^2.12.0",
-		"@parcel/transformer-webmanifest": "^2.12.0",
-		"autoprefixer": "^10.4.21",
-		"parcel": "^2.12.0",
-		"postcss": "^8.4.45",
+		"@parcel/packager-raw-url": "^2.14.4",
+		"@parcel/transformer-webmanifest": "^2.14.4",
+		"@tailwindcss/postcss": "^4.1.2",
+		"parcel": "^2.14.4",
+		"postcss": "^8.5.3",
 		"prettier": "^3.5.3",
 		"tailwindcss": "^4.1.2"
 	}
