--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 		"@parcel/packager-raw-url": "^2.14.4",
 		"@parcel/transformer-webmanifest": "^2.14.4",
 		"@tailwindcss/postcss": "^4.1.2",
+		"node-fetch": "^2.7.0",
 		"parcel": "^2.14.4",
 		"postcss": "^8.5.3",
 		"prettier": "^3.5.3"
